--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,5 @@
-# Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+# Binaries
+aoc
 
 # Test binary, built with `go test -c`
 *.test
@@ -11,8 +7,6 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-# vendor/
-
 # IDE files
 .idea/
+
